# pypackaging.bzl

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  pypackaging.bzl
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  release.yaml  release_prep.sh
docs/: BUILD.bazel  MODULE.bazel  pypackaging.md
e2e/smoke/: BUILD.bazel  MODULE.bazel  check_pypackaging.bzl
pypackaging/: BUILD.bazel  pypackaging.bzl
pypackaging/private/markers/: BUILD.bazel  markers.bzl
pypackaging/private/requirements/: BUILD.bazel  requirements.bzl
pypackaging/private/specifiers/: BUILD.bazel  specifiers.bzl
pypackaging/private/tags/: tags.bzl
pypackaging/private/utils/: BUILD.bazel  utils.bzl
pypackaging/tests/: BUILD.bazel  test_markers.bzl  test_requirements.bzl  test_specifiers.bzl  test_tags.bzl  test_utils.bzl  test_version.bzl
