"""Build rules for pypackaging.bzl."""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@package_metadata//rules:package_metadata.bzl", "package_metadata")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "pypackaging",
    srcs = ["pypackaging.bzl"],
    deps = ["//pypackaging"],
)

package_metadata(
    name = "package_metadata",
    purl = "pkg:bazel/{}@{}".format(
        module_name(),
        module_version(),
    ),
    visibility = ["//visibility:public"],
)
