load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "markers",
    srcs = ["markers.bzl"],
    deps = [
        "//pypackaging/private/specifiers",
        "//pypackaging/private/utils",
        "//pypackaging/private/version",
    ],
)
