load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "requirements",
    srcs = ["requirements.bzl"],
    deps = [
        "//pypackaging/private/markers",
        "//pypackaging/private/specifiers",
        "//pypackaging/private/utils",
    ],
)
